# vm

./: .gitignore  CMakeLists.txt  TODOs.md  config.h  err.def  main.cpp  op.def  vm.cpp  vm.h
liberrmsgs/: CMakeLists.txt  errmsgs.cpp  errmsgs.h
libvm/: CMakeLists.txt  accessor.cpp  accessor.h  asm.h  balanaced_tree.cpp  balanced_tree.cpp  balanced_tree.h  defines.h  err.cpp  err.def  err.h  heap.cpp  heap.h  list.cpp  list.h  op.def  ordered_tree.cpp  ordered_tree.h  ptr.cpp  ptr.h  tree.cpp  tree.h  value.cpp  value.h  vm.cpp  vm.h
libvm/ops/: CMakeLists.txt  add.cpp  add.h  and.cpp  and.h  div.cpp  div.h  mod.cpp  mod.h  mult.cpp  mult.h  or.cpp  or.h  poly.cpp  poly.h  sub.cpp  sub.h  xor.cpp  xor.h
tests/: CMakeLists.txt  test-add-int.cpp  test-add.cpp  test-bool.cpp  test-call.cpp  test-ch-to-int.cpp  test-collect-garbage.cpp  test-div-int.cpp  test-div.cpp  test-dup.cpp  test-equals.cpp  test-fetch.cpp  test-heap.cpp  test-jmp.cpp  test-less.cpp  test-mod-int.cpp  test-mod.cpp  test-mult-int.cpp  test-mult.cpp  test-pull.cpp  test-push-pull.cpp  test-send-receive.cpp  test-store.cpp  test-sub-int.cpp  test-sub.cpp  test-swap.cpp  test-to-byte.cpp  test-to-ch.cpp  test-to-int.cpp  test-tree.cpp  vm-tests.cpp  vm-tests.h
